external-crates/move/crates/move-compiler/tests/move_2024/parser/global_access_value_invalid.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/global_access_value_invalid.move:3:15
  │
3 │         1 + ::global_value
  │               ^^^^^^^^^^^^ Expected '::' after the address in this module access chain
  │
  = Access chains that start with '::' must be one of the following forms: 
      '::<address>::<module>', '::<address>::<module>::<member>'

error[E04007]: incompatible types
  ┌─ tests/move_2024/parser/global_access_value_invalid.move:4:5
  │
2 │     fun foo(): u64 {
  │                --- Expected: 'u64'
3 │         1 + ::global_value
4 │     }
  │     ^
  │     │
  │     Invalid return expression
  │     Given: '()'

